# dib

./: .gitignore  CMakeLists.txt  README.md  compile  entities.tmp  entity_type.h  graph.c  graph.h  hash.c  hash.h  main.c  node.h  relation.h  types.h
data/: data.dib
data/tmp/: entities.tmp
src/: CMakeLists.txt  main.c
src/algs/: CMakeLists.txt  algs.c  algs.h
src/core/: .CMakeLists.txt.swp  CMakeLists.txt  data.c  node.c  node.h  relation.c
src/core/data/: CMakeLists.txt  data.c  data.h
src/core/entity_type/: CMakeLists.txt  entity_type.c  entity_type.h
src/core/graph/: CMakeLists.txt  graph.c  graph.h
src/core/node/: CMakeLists.txt  node.c  node.h
src/core/relation/: CMakeLists.txt  relation.c  relation.h
src/core/storage/: CMakeLists.txt  files.h
src/core/storage/deserialization/: CMakeLists.txt  deserialization.c  deserialization.h
src/core/storage/files/: CMakeLists.txt  files.c  files.h
src/core/storage/serialization/: CMakeLists.txt  serialization.c  serialization.h
src/hash/: CMakeLists.txt  hash.c  hash.h
src/language_core/: .lexer.c.swp  CMakeLists.txt  compile  language_core.c  language_core.h  main.c
src/language_core/algs/: Makefile  cmake_install.cmake
src/language_core/lexer/: CMakeLists.txt  lexer.c  lexer.h
src/language_core/parser/: CMakeLists.txt  parser.c  parser.h
src/language_core/tokens/: CMakeLists.txt  tokens.c  tokens.h
src/lexer/: lexer.c
src/tokens/: tokens.c  tokens.h
src/types/: CMakeLists.txt  types.h
